--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h2 class="timer-title">До Дня Рождения осталось:</h2>
+    <h2 class="timer-title"></h2>
     <div class="timer" id="timer-1">
       <div class="field">
         <span class="value" data-value="days">11</span>
